--- a/prayerbook/trans_cal_cn.plist
+++ b/prayerbook/trans_cal_cn.plist
@@ -14,6 +14,8 @@
 	<string>纪念前六次神圣普世大公会议之诸位圣教父</string>
     <key>Commemoration of the Holy Fathers of the Seventh Ecumenical Council</key>
     <string>纪念第七次神圣普世大公会议之诸位圣父师</string>
+    <key>Synaxis of all Venerable Fathers of the Kiev Caves</key>
+    <string>纪念圣髑安息于基辅窟的全体圣徒</string>
 	<key>Holy Ancestors</key>
 	<string></string>
 	<key>Theotokos</key>
