--- a/prayerbook/trans_cal_ru.plist
+++ b/prayerbook/trans_cal_ru.plist
@@ -6,6 +6,8 @@
 	<string>Четверток Великого канона (Мариино стояние)</string>
 	<key>New Year</key>
 	<string>новолетия</string>
+    <key>Synaxis of all Venerable Fathers of the Kiev Caves</key>
+    <string>Собор всех преподобных отцов Киево-Печерских</string>
 	<key>Synaxis of all saints of Moscow</key>
 	<string>Собор Московских святых</string>
 	<key>Synaxis of all saints of Nizhny Novgorod</key>
