fixing saints and translations

--- a/prayerbook/trans_cal_cn.plist
+++ b/prayerbook/trans_cal_cn.plist
@@ -158,7 +158,7 @@
 	<string>圣妇塔玛拉（格鲁吉亚之王后，1213年）</string>
 	<key>St Joseph of Arimathea, and Nicodemus</key>
 	<string>義人亞利馬特的約瑟及尼科底姆</string>
-	<key>Radonitsa (Day of Rejoycing)</key>
+	<key>Radonitsa (Day of Rejoicing)</key>
 	<string>喜樂日。紀念亡者</string>
 	<key>Feast of the Life-Giving Spring of the Mother of God</key>
 	<string>「施生命之泉」聖母像</string>
@@ -220,7 +220,7 @@
 	<string>圣诞斋期</string>
 	<key>Great Lent</key>
 	<string>大斋期</string>
-	<key>Apostoles&apos; Fast</key>
+	<key>Apostles&apos; Fast</key>
 	<string>使徒斋期</string>
 	<key>Dormition Fast</key>
 	<string>圣母安息斋期</string>
