BookPage with toolbar and gestures

--- a/prayerbook/trans_cal_ru.plist
+++ b/prayerbook/trans_cal_ru.plist
@@ -186,7 +186,7 @@
 	<string>Блгв. Тамары, царицы Грузинской (1213)</string>
 	<key>St Joseph of Arimathea, and Nicodemus</key>
 	<string>Иосифа Аримафейского и Никодима</string>
-	<key>Radonitsa (Day of Rejoycing)</key>
+	<key>Radonitsa (Day of Rejoicing)</key>
 	<string>Радоница (поминовение усопших)</string>
 	<key>Feast of the Life-Giving Spring of the Mother of God</key>
 	<string>Иконы Божией Матери «Живоносный Источник»</string>
@@ -358,7 +358,7 @@
 	<string>Начало Успенского поста</string>
 	<key>Beginning of Nativity fast</key>
 	<string>Начало Рождественского поста</string>
-	<key>Beginning of Apostoles&apos; fast</key>
+	<key>Beginning of Apostles&apos; fast</key>
 	<string>Начало Петрова поста</string>
 	<key>Sunday of the Holy Forefathers</key>
 	<string>Неделя святых праотцев</string>
