--- a/prayerbook/trans_ui_ru.plist
+++ b/prayerbook/trans_ui_ru.plist
@@ -22,6 +22,14 @@
 	<string>Если Вам понравилось это приложение, пожалуйста оцените его. Спасибо за поддержку!</string>
 	<key>Brotherhood of Sts Apostoles Peter and Paul, Hong Kong.</key>
 	<string>Приход Свв. Апп. Петра и Павла в Гонконге</string>
+    <key>Church</key>
+    <string>Храм</string>
+    <key>church_info</key>
+    <string>Петропавловский приход Гонконга был открыт в 1934 г. Первым настоятелем храма был прот. Дмитрий Успенский. Храм просуществовал до момента смерти о. Димитрия в 1970 г. Летом 2003 года в Гонконг прибыл прот. Дионисий Поздняев, и регулярные богослужения в храме были возобновлены.
+    </string>
+    <key>app_info</key>
+    <string>Предлагаем вам установить приложение нашего храма. С помощью него можно отправить записку на проскомидию, узнать расписание богослужений и многое другое.
+    </string>
 	<key>Nuts</key>
 	<string>Орехи</string>
 	<key>Bread</key>
