--- a/prayerbook/trans_ui_ru.plist
+++ b/prayerbook/trans_ui_ru.plist
@@ -24,11 +24,20 @@
 	<string>Приход Свв. Апп. Петра и Павла в Гонконге</string>
     <key>Church</key>
     <string>Храм</string>
+    <key>Donation</key>
+    <string>Пожертвование</string>
+    <key>Thanks for your donation</key>
+    <string>Благодарим за пожертвование!</string>
+    <key>Copied to clipboard</key>
+    <string>Скопировано в буфер обмена</string>
     <key>church_info</key>
-    <string>Петропавловский приход Гонконга был открыт в 1934 г. Первым настоятелем храма был прот. Дмитрий Успенский. Храм просуществовал до момента смерти о. Димитрия в 1970 г. Летом 2003 года в Гонконг прибыл прот. Дионисий Поздняев, и регулярные богослужения в храме были возобновлены.
+    <string>Петропавловский приход Гонконга был открыт в 1934 г. Первым настоятелем храма был прот. Дмитрий Успенский. Храм просуществовал до смерти о. Димитрия в 1970 г. Летом 2003 года в Гонконг прибыл прот. Дионисий Поздняев, и регулярные богослужения в храме были возобновлены.
     </string>
     <key>app_info</key>
-    <string>Предлагаем вам установить приложение нашего храма. С помощью него можно отправить записку на проскомидию, узнать расписание богослужений и многое другое.
+    <string>Представляем вашему вниманию мобильное приложение храма. С его помощью можно подать записку на поминовение, узнать расписание богослужений и многое другое.
+    </string>
+    <key>donation_info</key>
+    <string>Для дальнейшей разработки этого приложения нам нужна ваша помощь. Пожалуйста, пожертвуйте любую сумму с помощью кнопок. Спаси Господи!
     </string>
 	<key>Nuts</key>
 	<string>Орехи</string>
