Church info translations fixed

--- a/prayerbook/trans_ui_ru.plist
+++ b/prayerbook/trans_ui_ru.plist
@@ -30,6 +30,14 @@
     <string>Благодарим за пожертвование!</string>
     <key>Copied to clipboard</key>
     <string>Скопировано в буфер обмена</string>
+    <key>Donate %@</key>
+    <string>Пожертвовать %@</string>
+    <key>Any amount...</key>
+    <string>Любая сумма...</string>
+    <key>Install app</key>
+    <string>   Установить приложение</string>
+    <key>Orthodox Church in Hong Kong</key>
+    <string>Храм Святых Первоверховных Апостолов Петра и Павла в Гонконге</string>
     <key>church_info</key>
     <string>Петропавловский приход Гонконга был открыт в 1934 г. Первым настоятелем храма был прот. Дмитрий Успенский. Храм просуществовал до смерти о. Димитрия в 1970 г. Летом 2003 года в Гонконг прибыл прот. Дионисий Поздняев, и регулярные богослужения в храме были возобновлены.
     </string>
