--- a/prayerbook/trans_ui_cn.plist
+++ b/prayerbook/trans_ui_cn.plist
@@ -105,7 +105,7 @@
     <key>Copied to clipboard</key>
     <string>复制到剪贴板</string>
     <key>Donate %@</key>
-    <string>捐獻 %@</string>
+    <string>捐献 %@</string>
     <key>Any amount...</key>
     <string>任何金额...</string>
     <key>Install app</key>
