--- a/prayerbook/trans_cal_ru.plist
+++ b/prayerbook/trans_cal_ru.plist
@@ -376,7 +376,7 @@
 	<string>Суббота пред Рождеством Христовым</string>
 	<key>Saturday after the Nativity of Christ</key>
 	<string>Суббота по Рождестве Христовом</string>
-	<key>Sunday after Nativity</key>
+	<key>Sunday after Nativity of Christ</key>
 	<string>Неделя по Рождестве Христовом</string>
 	<key>Saturday before Theophany</key>
 	<string>Суббота пред Богоявлением</string>
