--- a/prayerbook/trans_cal2_en.plist
+++ b/prayerbook/trans_cal2_en.plist
@@ -192,5 +192,67 @@
 	<string>Icon of the Mother of God “Surety of Sinners” in Korets (1622)</string>
 	<key>softenerTheotokos</key>
 	<string>Icons of the Mother of God: “the Softener of evil hearts” and “the Indestructible Wall”</string>
+    <key>apodosis_pascha</key>
+    <string>Apodosis of Pascha</string>
+    <key>afterfeast_ascension</key>
+    <string>Afterfeast of the Ascension</string>
+    <key>apodosis_ascension</key>
+    <string>Apodosis of the Ascension</string>
+    <key>afterfeast_pentecost</key>
+    <string>Afterfeast of Pentecost</string>
+    <key>apodosis_pentecost</key>
+    <string>Apodosis of Pentecost</string>
+    <key>forefeast_nativityOfGod</key>
+    <string>Forefeast of the Nativity</string>
+    <key>afterfeast_nativityOfGod</key>
+    <string>Afterfeast of the Nativity of Our Lord</string>
+    <key>apodosis_nativityOfGod</key>
+    <string>Apodosis of the Nativity of Christ</string>
+    <key>forefeast_theophany</key>
+    <string>Forefeast of Theophany</string>
+    <key>afterfeast_theophany</key>
+    <string>Afterfeast of the Theophany</string>
+    <key>apodosis_theophany</key>
+    <string>Apodosis of the Theophany</string>
+    <key>forefeast_transfiguration</key>
+    <string>Forefeast of the Transfiguration of the Lord</string>
+    <key>afterfeast_transfiguration</key>
+    <string>Afterfeast of the Transfiguration of the Lord</string>
+    <key>apodosis_transfiguration</key>
+    <string>Apodosis of the Transfiguration of the Lord</string>
+    <key>forefeast_dormition</key>
+    <string>Forefeast of the Dormition of the Mother of God</string>
+    <key>afterfeast_dormition</key>
+    <string>Afterfeast of the Dormition</string>
+    <key>apodosis_dormition</key>
+    <string>Apodosis of the Dormition</string>
+    <key>forefeast_nativityOfTheotokos</key>
+    <string>Forefeast of the Nativity of the Theotokos</string>
+    <key>afterfeast_nativityOfTheotokos</key>
+    <string>Afterfeast of the Nativity of the Theotokos</string>
+    <key>apodosis_nativityOfTheotokos</key>
+    <string>Apodosis of the Nativity of the Theotokos</string>
+    <key>forefeast_exaltationOfCross</key>
+    <string>Forefeast of the Exaltation of the Cross</string>
+    <key>afterfeast_exaltationOfCross</key>
+    <string>Afterfeast of the Exaltation of the Cross</string>
+    <key>apodosis_exaltationOfCross</key>
+    <string>Apodosis of the Exaltation of the Cross</string>
+    <key>forefeast_entryIntoTemple</key>
+    <string>Forefeast of the Entry of the Theotokos</string>
+    <key>afterfeast_entryIntoTemple</key>
+    <string>Afterfeast of the Entry of the Theotokos</string>
+    <key>apodosis_entryIntoTemple</key>
+    <string>Apodosis of the Entry of the Theotokos</string>
+    <key>forefeast_annunciation</key>
+    <string>Forefeast of the Annunciation</string>
+    <key>apodosis_annunciation</key>
+    <string>Apodosis of the Annunciation</string>
+    <key>forefeast_meetingOfLord</key>
+    <string>Forefeast of the Meeting of the Lord</string>
+    <key>afterfeast_meetingOfLord</key>
+    <string>Afterfeast of the Meeting of the Lord</string>
+    <key>apodosis_meetingOfLord</key>
+    <string>Apodosis of the Meeting of the Lord</string>
 </dict>
 </plist>
