various bug fixes in calendar and library

--- a/prayerbook/trans_bible_cs.plist
+++ b/prayerbook/trans_bible_cs.plist
@@ -132,7 +132,7 @@
     <string>І҆ѡа́нна тре́тїе</string>
     <key>General Epistle of Jude</key>
     <string>І҆ꙋ́дино</string>
-    <key>Revelation of St John the Devine</key>
+    <key>Revelation of St John the Divine</key>
     <string>А҆пока́лѷѱїсъ</string>
     <key>Chapter %@</key>
     <string>Глава %@</string>
