--- a/prayerbook/trans_library_ru.plist
+++ b/prayerbook/trans_library_ru.plist
@@ -132,7 +132,7 @@
 	<string>3-е послание Иоанна</string>
 	<key>General Epistle of Jude</key>
 	<string>Послание Иуды</string>
-	<key>Revelation of St John the Devine</key>
+	<key>Revelation of St John the Divine</key>
 	<string>Откровение Иоанна Богослова</string>
 	<key>Chapter %@</key>
 	<string>Глава %@</string>
