--- a/prayerbook/trans_cal_cn.plist
+++ b/prayerbook/trans_cal_cn.plist
@@ -354,7 +354,7 @@
 	<string>主降生节前安息日</string>
 	<key>Saturday after the Nativity of Christ</key>
 	<string>主降生节后安息日</string>
-	<key>Sunday after Nativity</key>
+	<key>Sunday after Nativity of Christ</key>
 	<string>主降生节后主日</string>
 	<key>Saturday before Theophany</key>
 	<string>主显节前安息日</string>
