--- a/prayerbook/trans_library_cn.plist
+++ b/prayerbook/trans_library_cn.plist
@@ -54,7 +54,7 @@
 	<string>若望三书</string>
 	<key>General Epistle of Jude</key>
 	<string>犹达书</string>
-	<key>Revelation of St John the Devine</key>
+	<key>Revelation of St John the Divine</key>
 	<string>若望默示录</string>
 	<key>Chapter %@</key>
 	<string>第%@章</string>
